--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,58 @@
 /* Add application styles & imports to this file! */
+p {
+  font-family: Lato;
+}
+
+input:not(.preffered){
+  margin-bottom: 10px;
+  width: 300px;
+  height: 30px;
+  border: 1px solid black;
+  border-radius: 8px;
+  font-size: 20px;
+  padding:5px;
+}
+
+label:not(.preffered>label){
+  display: block;
+  padding-bottom: 15px;
+}
+
+error{
+  border-left: 10px solid red;
+}
+
+success{
+  border-left: 10px solid green;
+}
+
+.btn{
+  width: 100px;
+  height:50px;
+  background-color: rgb(28, 128, 146);
+  color: white;
+  border: 2px solid white;
+  font-size: 15px;
+  border-radius: 10px;
+}
+
+button:disabled {
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
+}
+
+form{
+  margin: 20px;
+}
+
+.preferred{
+  display: flex;
+  flex-wrap: nowrap;
+  flex-shrink: 2;
+}
+.preferred>input{
+  width: 20px;
+  padding:0px;
+  margin-bottom: 0px;
+}
